[Doc] Update Docs for Files() (#60727)